<resources>
    <string name="app_name">NewsFeed</string>
    <string name="start_loading"><b>Page will soon be fully loaded</b></string>
    <string name="notification_title"><b>NewsFeed Reminder</b></string>
    <string name="notification_updated"><b>Notification Updated!</b></string>
    <string name="notification_channel_name"><b>Reminder Notification</b></string>
    <string name="notification_channel_description"><b>Notification from NewsFeed</b></string>
    <string name="notification_text"><b>This is to remind you that there are new headlines across the world, to know.</b></string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_open_chrome">Open in Chrome</string>
    <string name="spinner_category">Category</string>
    <string name="spinner_country">Country</string>
    <string name="general">General</string>
    <string name="entertainment">Entertainment</string>
    <string name="top_sport_news">Top Sport News</string>
    <string name="top_business_news">Top Business News</string>
    <string name="action_view_all"><b><u>View all>></u></b></string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="notify_header">Notification Settings</string>
    <string name="other_news_header">Other News Settings</string>

    <!--Notification Preference -->
    <string name="notify_title">Notification</string>
    <string name="notify_summary">Turn this option on or off to get notified</string>

    <!--Other News Category Preference -->
    <string name="other_news_category_title">Category</string>
    <string name="other_news_category_summary">Choose the category of news for the other news section</string>
    <string name="key_category_news">category</string>
    <string name="key_dropdown_category_news">dropdowncategory</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="key_notification_reminder">notify</string>

    <!--Bottom Navigation -->
    <string name="title_home"><b>Home</b></string>
    <string name="title_search"><b>Search</b></string>
    <string name="title_business"><b>Business</b></string>
    <string name="title_sports"><b>Sports</b></string>
    <string name="title_others"><b>Others</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
